[package]
name = "wasi2ic"
version = "0.2.17"
edition = "2021"
description = "This tool converts WebAssembly System Interface (WASI) dependent Wasm files to be compatible with the Internet Computer (IC) platform."
keywords = ["ic", "internet-computer", "wasi"]
license = "MIT"
repository = "https://github.com/wasm-forge/wasi2ic"

[lib]
name = "wasi2ic"
path = "src/lib.rs"

[[bin]]
name = "wasi2ic"
path = "src/main.rs"

[dependencies]
walrus = "0.22.0"

clap = { version = "4.5.48", features = ["derive"] }
anyhow = { version = "1.0.100", default-features = false }
env_logger = "0.11.8"
log = "0.4.28"
wasmprinter = "0.239.0"
wat = "1.239.0"
ic-wasm = "0.9.6"
